src/ext.zed/zed.css
.code-sheet {
  display: block;

  min-width: 100px;
  min-height: 100px;
  padding: 4px;
  margin: 0px;

  background-color: white;
  border: 1px solid rgba(0, 0, 0, .3);
  border-radius: 4px;
  box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
}

.zed-wrapper {
  display: block;
  width: 100%;
  height: 100%;
}

#zed-stage .ace_scrollbar {
  display: none !important;
}

#zed-stage .ace_scroller {
  right: 0px !important;
}

#zed-stage .ace_active-line {
  width: 100% !important;
}

#zed-stage .ace_content {
  width: 100% !important;
}

